# mrkdwnify

./: .gitignore  README.md  main.py  pyproject.toml  readme.md
.github/workflows/: publish.yml
mrkdwn/: __init__.py
tests/: test_mrkdwn.py
