[project]
name = "mrkdwnify"
authors = [
    {name = "Benjamin Gelb", email = "benjamin.gelb.io@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "markdownify==0.4.7",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
]


[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["setuptools ~= 58.0",]