[project]
name = "mrkdwnify"
authors = [
    {name = "Benjamin Gelb", email = "benjamin.gelb.io@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
description = "mrkdwnify is a python adaptation of the javascript html-to-mrkdwn library."
version = "0.1"

dependencies = [
    "markdownify==0.13.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
]


[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["setuptools", "wheel", "twine"]
